# zms-tradition-data

./: .env  .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  logs.jsonl
migrations/2025-05-19-062532_create_coin_rank_info/: down.sql  up.sql
migrations/2025-05-19-062851_create_coin_categories/: up.sql
migrations/2025-05-22-084244_create_coin_rank_info/: up.sql
migrations/2025-05-22-084313_create_coin_data_info/: down.sql  up.sql
migrations/2025-05-22-084325_create_coin_categories/: down.sql  up.sql
migrations/2025-05-25-010002_create_market_kline/: down.sql  up.sql
migrations/2025-05-27-123904_create_market_symbol/: down.sql  up.sql
src/: collector.rs  db.rs  global.rs  infra.rs  kv_store.rs  lib.rs  macros.rs  main.rs  model.rs  schema.rs  server.rs  trade_consumer.rs  util.rs
src/collector/: aggregatoragg.rs  archive.rs  maintenance.rs  mod.rs  types.rs
src/collector/archive/: dispatch_worker.rs  fetch.rs  flush.rs  kline_buffer.rs  sink.rs  types.rs  worker.rs
src/collector/archive/fetch/: helper.rs  progress.rs
src/collector/maintenance/: types.rs
src/common/: log_utils.rs  mod.rs  serde_fun.rs  utils.rs
src/db/: ckdb.rs  flush_controller.rs  kv_store.rs  types.rs
src/domain/: mod.rs  model.rs  repository.rs  service.rs
src/domain/model/: coin_category.rs  coin_data_info.rs  coin_rank_info.rs  market_kline.rs  market_symbol.rs
src/domain/repository/: coin_category_repository.rs  coin_data_info_repository.rs  coin_rank_info_repository.rs  market_kline_repository.rs  market_symbol_repository.rs
src/domain/service/: coin_category_service.rs  coin_data_info_service.rs  coin_rank_info_service.rs  market_kline_service.rs  market_symbol_service.rs
src/infra/: cache.rs  db.rs  external.rs  mod.rs
src/infra/cache/: flush_controller.rs  kv_store.rs
src/infra/db/: ckdb.rs  mysql.rs  types.rs
src/macros/: ckdb_table_macros.rs  mod.rs  repository_macros.rs  repository_with_filter_macros.rs  service_macros.rs
src/model/: cex.rs  constant.rs  dex.rs
src/model/cex/: kline.rs
src/model/dex/: price.rs
src/scheduler/: mod.rs  tasks.rs
src/scheduler/tasks/: fetch_cgecko.rs  history_data.rs
src/server/: response.rs  routes.rs
src/server/routes/: handlers.rs
src/server/routes/handlers/: log_handlers.rs
src/service/: model.rs
src/trade_consumer/: aggregatoragg.rs  aggregatoragg_upgrade.rs  maintenance.rs  types.rs
src/trade_consumer/maintenance/: types.rs
