[package]
name = "zms-tradition-data"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.44.2", features = ["full"] }
warp = "0.3.7"
# listen tracing
tracing = "0.1.41"
listen-tracing ={ git = "https://github.com/ztNozdormu/listen-tracing", branch = "main", version = "0.1.2"}

# Data Structures
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
async-stream = "0.3.6"
bigdecimal = { version = "0.4", features = ["serde"] }


# storage
clickhouse = { version = "0.13.1", features = ["native-tls", "inserter"] }
dotenv = "0.15.0"
bb8-redis = "0.20.0"
diesel = { version = "2.2.10", features = ["mysql", "r2d2", "chrono", "extras"] }
# third tools
thiserror = "2.0.11"
anyhow = "1.0.95"
futures = "0.3.31"
# Kline tool
trade_aggregation = "12.0.3"
# Barter Ecosystem
barter = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local" }
reqwest = { version = "0.12.9",default-features = false, features = ["rustls-tls", "json"] }

# Cryptographic Signatures
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.8" }
hex = { version = "0.4.3" }
base64 = { version = "0.22.1" }

futures-util = "0.3.31"
once_cell = "1.21.3"
backoff = { version = "0.4.0",features = ["tokio"] }
#log = "0.4.27"

